# Lexgraph-ai

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  test_rag.py
src/my_project/: case.txt  crew.py  knowledge_graph.py  main.py  pdf_export.py  rag.py
src/my_project/config/: agents.yaml  tasks.yaml
src/my_project/tools/: retrieval_tool.py
