[project]
name = "my_project"
version = "0.1.0"
description = "my_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chromadb>=1.1.1",
    "crewai[google-genai,ollama]>=1.14.6",
    "gradio>=6.17.3",
    "matplotlib>=3.10.9",
    "networkx>=3.4.2",
    "pypdf>=6.13.1",
    "reportlab>=4.5.1",
    "sentence-transformers>=5.5.1",
]

[project.scripts]
my_project = "my_project.main:run"
run_crew = "my_project.main:run"
train = "my_project.main:train"
replay = "my_project.main:replay"
test = "my_project.main:test"
run_with_trigger = "my_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
